Update layout to prevent overflow from creating horizontal scrollbar

--- a/app/javascript/stylesheets/redesign/_layout.scss
+++ b/app/javascript/stylesheets/redesign/_layout.scss
@@ -11,6 +11,10 @@ body {
 .layout {
   font-family: var(--font-sans);
 
+  // Prevent horizontal scrollbar:
+  overflow-x: hidden;
+  position: relative;
+
   &__header {
     background-color: black;
   }
