--- a/app/javascript/stylesheets/redesign/_mixins.scss
+++ b/app/javascript/stylesheets/redesign/_mixins.scss
@@ -3,8 +3,8 @@
   position: relative;
   left: 50%;
   right: 50%;
-  margin-left: calc(-50vw - var(--size-2));
-  margin-right: calc(-50vw - var(--size-2));
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 @mixin header-picture {
